# crimea_opendac

./: .gdbinit  .gitmodules  CMakeLists.txt  README.md  libopencm3.cmake
eaglecad/: Crimea.brd  Crimea.sch
src/: CMakeLists.txt  board_setup.c  crimea_dac.c  crimea_dac.h  encoder.c  main.c
src/board/: board_setup.c
